# latpm

./: README.md  pyproject.toml
benchmark/: admin.py  models.py  serializers.py  urls.py  views.py
benchmark/migrations/: 0001_initial.py
core/: settings.py  urls.py
file/: models.py  urls.py  views.py
file/migrations/: 0001_initial.py
file/services/: __init__.py  csv_file.py
hardware/: admin.py  models.py  serializers.py  urls.py  views.py
hardware/migrations/: 0001_initial.py
